--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <section>
             <h2>E-commerce</h2>
             <div id="productos">
-<!-- agregar productos con script.js -->
+                <!-- agregar productos con script.js -->
             </div>
+
             <h2>Carrito</h2>
-            <div id="carrito">
-<!-- agregar productos con script.js -->
-            </div>
+            <div id="carrito"></div>
+            <p>Total: $<span id="totalCarrito">0</span></p>
         </section>
     </main>
     <footer>
